Add lower bound for global_k
Remove center point from being its own neighbor at local measure