@@ -22,10 +22,10 @@
 #
 import numpy as np
 import torch
-import torch.optim as optim
 from scipy.spatial.distance import cdist
 from scipy.stats import rankdata
 from torch import from_numpy, tensor
+from torch.optim import RMSprop
 from torch.utils.data import Dataset, DataLoader
 
 from sortedness.embedding.surrogate import cau, loss_function
@@ -44,7 +44,7 @@ class Dt(Dataset):
         return idx
 
 
-def balanced(X, symmetric, d=2, gamma=4, k=17, global_k: int = "sqrt", beta=0.5, smooothness_tau=1, neurons=30, epochs=100, batch_size=20, min_global_k=100, max_global_k=1000, seed=0, gpu=False):
+def balanced(X, symmetric, d=2, gamma=4, k=17, global_k: int = "sqrt", beta=0.5, smooothness_tau=1, neurons=30, epochs=100, batch_size=20, learning_optimizer=RMSprop, min_global_k=100, max_global_k=1000, seed=0, gpu=False, **learning_optimizer_kwargs):
     """
     >>> from sklearn import datasets
     >>> from sklearn.preprocessing import StandardScaler
@@ -83,6 +83,9 @@ def balanced(X, symmetric, d=2, gamma=4, k=17, global_k: int = "sqrt", beta=0.5,
     neurons
     epochs
     batch_size
+    learning_optimizer
+        Callable to perform gradient descent. See learner_parameters below.
+        Default = RMSProp
     min_global_k
         Lower bound for the number of "neighbors" to sample when `global_k` is dynamic.
     max_global_k
@@ -90,7 +93,11 @@ def balanced(X, symmetric, d=2, gamma=4, k=17, global_k: int = "sqrt", beta=0.5,
     seed
     gpu
         Whether to use GPU.
-
+    learning_optimizer_kwargs
+        Arguments for `learner`. Intended to expose for tunning the hyperparameters that affect speed or quality of learning.
+        Default arguments for RMSprop: 
+            lr=0.01, alpha=0.99, eps=1e-08, weight_decay=0, momentum=0, centered=False, foreach=None, maximize=False, differentiable=False
+            
     Returns
     -------
     Transformed `d`-dimensional data as a numpy float array.
@@ -125,7 +132,7 @@ def balanced(X, symmetric, d=2, gamma=4, k=17, global_k: int = "sqrt", beta=0.5,
     T = from_numpy(X).cuda() if gpu else from_numpy(X)
     w = cau(tensor(range(n)), gamma=gamma)
 
-    optimizer = optim.RMSprop(model.parameters())
+    learning_optimizer = learning_optimizer(model.parameters(), **learning_optimizer_kwargs)
     model.train()
     loader = DataLoader(Dt(T), shuffle=True, batch_size=batch_size, pin_memory=gpu)
     with torch.enable_grad():
@@ -135,7 +142,7 @@ def balanced(X, symmetric, d=2, gamma=4, k=17, global_k: int = "sqrt", beta=0.5,
                 expected_ranking_batch = R[idx]
                 D_batch = pdist(encoded[idx].unsqueeze(1), encoded.unsqueeze(0)).view(len(idx), -1)
                 loss, mu_local, mu_global, tau_local, tau_global = loss_function(D_batch, expected_ranking_batch, k, global_k, w, beta, smooothness_tau, min_global_k, max_global_k)
-                optimizer.zero_grad()
+                learning_optimizer.zero_grad()
                 (-loss).backward()
-                optimizer.step()
+                learning_optimizer.step()
     return model(T).detach().cpu().numpy().astype(float)
